.provarCaches/00D5f000005vwGkEAI/objects/rstk__zzsobj__c.object
<CustomObject>
    <description>zzsobj__c</description>
    <fields>
        <fullName>rstk__PORcptLocID__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PORcptLocID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__errormessage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ErrorMessage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__invDiv__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Division</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__isLot__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>isLot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__isSrl__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>isSrl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__line__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locids__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Locids</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>locnum</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__lotcomments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LotComments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__lotno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>lotno</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__lotserind__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>lotserind</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrId__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>POHeaderID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>POHDRADDR</label>
        <referenceTo>rstk__pohdraddr__c</referenceTo>
        <relationshipLabel>ZZ SObjects</relationshipLabel>
        <relationshipName>ZZ_SObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohdrname__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>POHeaderName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>POLINE</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>ZZ SObjects</relationshipLabel>
        <relationshipName>ZZ_SObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_rcptno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>porcv_rcptno</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_vendname__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>VendorName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcv_vendorno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>VendorNo</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__qtyRcvd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>QtyRcvd</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__srlNos__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>srlNos</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__zzsobj_amount__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rstk__zzsobj_date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>ZZ SObject</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>ZZ SObject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZZ SObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>